@@ -1,4 +1,8 @@
 2008-02-18 Brian Matherly <brian@gramps-project.org>
+	* src/plugins/CmdRef.py:
+	0001688: BUG when I clicked generate commandline plugin reference tool
+
+2008-02-18 Brian Matherly <brian@gramps-project.org>
 	* src/plugins/BookReport.py:
 	* src/ReportBase/_ReportDialog.py:
 	0001788: Book report crash
